--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,12 @@
     "declaration": true
   },
   "include": ["lib/**/*"],
-  "exclude": ["test*/**/*", "**/*.test.ts", "**/*.spec.ts", "bench/**/*", "node_modules/**/*", "types/**/*"]
+  "exclude": [
+    "test*/**/*",
+    "**/*.test.ts",
+    "**/*.spec.ts",
+    "bench/**/*",
+    "node_modules/**/*",
+    "types/**/*"
+  ]
 }
